fix bug #40576 (double values are truncated to 6 decimal digits when encoding)